# aoc

./: .gitignore  LICENSE  pkgs.txt  pyproject.toml  requirements.txt
src/aoc_2023/day_01/: day_01.py
src/aoc_2023/day_02/: day_02.py  day_XY.py
src/aoc_2023/day_03/: day_03.py
src/aoc_2023/day_04/: day_04.py
src/aoc_2023/day_06/: day_06.py
src/aoc_2023/day_07/: solution.py
src/aoc_2023/day_08/: solution.py
src/aoc_2023/day_09/: solution.py
src/aoc_2023/day_XY/: solution.py
src/aoc_2024/day_01/: solution.py
src/aoc_2024/day_02/: solution.py
src/aoc_2024/day_03/: solution.py
src/aoc_2024/day_06/: solution.py
src/aoc_2024/day_07/: solution.py
src/aoc_2024/day_XY/: solution.py
